[workspace]
members = [
    "programs/duelana",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
blake3 = "=1.5.5"
borsh = "=1.3.1"
indexmap = "=2.7.0"
serde = "=1.0.210"
