[package]
name = "duelana"
version = "0.1.0"
description = "On-chain dueling game with wagering mechanics for Solana Seeker"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "duelana"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
testing = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
ephemeral-vrf-sdk = { version = "0.2.3", features = ["anchor"] }
blake3 = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true }
